--- a/scripts/creat_area_amostras.ipynb
+++ b/scripts/creat_area_amostras.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<p align=\"center\">\n",
+    "    <img src=\"../assets/imgs/creat_geohash.svg\" alt=\"drawing\" style=\"width:600px;\"/>\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -130,7 +140,6 @@
     "    rows = list(tqdm(p.imap(loop, _h7.iterrows()), total=total))\n",
     "\n",
     "ttd = gpd.GeoDataFrame(rows)\n",
-    "ttd.sort_values('weiht_geometry', ascending=False)\n",
     "ttd.to_file('area_com_peso.gpkg')\n",
     "\n",
     "ttd2 = ttd\n",
@@ -191,13 +200,6 @@
    "source": [
     "gdf_br_amostras.to_crs(3857).to_file('amostra_rois_3857.gpkg')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
